src/test/ui/suggestions/issue-61573.stderr
error: unexpected `,` in pattern
  --> $DIR/issue-61573.rs:2:10
   |
LL |     let a, b = x;
   |         -^-- help: try adding parentheses to match on a tuple: `(a, b)`

error: aborting due to previous error

